<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment"
    android:background="@color/colorGrey">

    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Bloque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/title"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="9dp"
            ></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Firstsection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/Bloque"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="11dp">
        <TextView
            android:id="@+id/food1"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/product"
            app:layout_constraintTop_toTopOf="@id/Firstsection"
            app:layout_constraintStart_toStartOf="@id/Firstsection"
            android:layout_marginTop="10.59dp"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/food11"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/food1"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/food"
            android:textColor="@color/colorLightText"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/food12"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/food11"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/price"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="5dp"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="65dp"
            android:layout_height="85dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="13dp"
            android:src="@drawable/barbie"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Secondsection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/Firstsection"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="13dp">
        <TextView
            android:id="@+id/food2"
            android:textSize="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/product2"
            app:layout_constraintTop_toTopOf="@id/Secondsection"
            app:layout_constraintStart_toStartOf="@id/Secondsection"
            android:layout_marginTop="10.59dp"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/food21"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/food2"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/food2"
            android:textColor="@color/colorLightText"
            android:layout_marginLeft="5dp"/>
        <TextView
            android:id="@+id/food22"
            android:textSize="14dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/food21"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/price2"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="5dp"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="65dp"
            android:layout_height="85dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="13dp"
            android:src="@drawable/hambirguer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_orden"
        android:layout_width="326dp"
        android:layout_height="45dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginBottom="18dp"
        android:background="@color/colorgreen"
        android:text="@string/order"
        android:textSize="16dp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintStart_toStartOf="@id/main" />
    <ImageView
        android:id="@+id/car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_shopping_cart_24"
        app:layout_constraintBottom_toBottomOf="@id/button_orden"
        app:layout_constraintStart_toStartOf="@id/button_orden"
        app:layout_constraintTop_toTopOf="@id/button_orden"
        android:elevation="4dp"
        android:layout_marginLeft="90dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>