<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderFragment"
    android:background="@color/colorGrey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Bloque2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/tv_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/title2"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="9dp"
            ></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_orden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick"
        android:textSize="20dp"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintTop_toTopOf="@id/main"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="62dp"/>
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_baseline_perm_identity_24"
        app:layout_constraintTop_toTopOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        android:layout_marginTop="62dp"
        android:layout_marginRight="43.05dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Firstsection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="@id/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="100dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/revisar"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="3dp"
            android:textColor="@color/colorBlack"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iorden"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@id/Firstsection"
        app:layout_constraintTop_toTopOf="@id/main"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="186dp"
        android:text="@string/items"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Secondtsection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="@id/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="223dp">

        <TextView
            android:id="@+id/tv_secondsection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/Ribs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="97dp"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@drawable/barbie"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="-16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:id="@+id/tv_secondsectionprice"
            android:text="@string/price"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="273dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="17dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:id="@+id/tv_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/Firstsection"
        app:layout_constraintTop_toTopOf="@id/main"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="334dp"
        android:text="@string/total"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Thirdsection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toTopOf="@id/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="372dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_torden"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toTopOf="@id/Thirdsection"
            android:text="@string/total2"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/Thirdsection"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="16dp"/>
        <TextView
            android:id="@+id/tv_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            app:layout_constraintTop_toTopOf="@id/Thirdsection"
            android:text="@string/price"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/Thirdsection"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="267dp"
            android:layout_marginRight="17dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_info"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="@id/Firstsection"
        app:layout_constraintTop_toTopOf="@id/main"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="424dp"
        android:text="Informacion del Usuario"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thirdsection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/main"
        app:layout_constraintStart_toStartOf="@id/main"
        app:layout_constraintEnd_toEndOf="@id/main"
        android:layout_marginTop="462dp"
        android:background="@color/colorWhite">
        <ImageView
            android:id="@+id/im_man"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_baseline_perm_identity_24"
            android:tint="@color/colorBlue"
            app:layout_constraintTop_toTopOf="@id/thirdsection"
            app:layout_constraintStart_toStartOf="@id/thirdsection"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="20dp"/>
    
        <TextView
            android:id="@+id/tv_info1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/thirdsection"
            app:layout_constraintStart_toStartOf="@id/thirdsection"
            android:text="@string/edit"
            android:textSize="16sp"
            android:textColor="@color/colorBlue"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="42dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/check"
        android:layout_width="326dp"
        android:layout_height="45dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="17dp"
        android:background="@color/colorgreen"
        android:text="CHECKOUT"
        android:textColor="@color/colorWhite"
        android:autoSizeMaxTextSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/main"
        app:layout_constraintStart_toStartOf="@id/main" />
</androidx.constraintlayout.widget.ConstraintLayout>