<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    tools:context=".EditFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Bloque2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:text="@string/title5"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="9dp"
            android:layout_marginLeft="18dp"
            android:layout_marginBottom="9dp"
            ></TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/Bloque2">
        <ImageView
            android:id="@+id/card"
            android:layout_width="26dp"
            android:layout_height="24dp"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="22dp"
            android:src="@drawable/ic_baseline_payment_24"
            android:tint="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nubert"
            android:textColor="@color/colorLightText"
            app:layout_constraintStart_toEndOf="@id/card"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="35dp"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorLightText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_number"
            android:layout_marginLeft="22dp"
            android:layout_marginEnd="12dp"
            app:layout_goneMarginTop="0dp"/>
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="31dp"
            android:layout_marginLeft="17dp"
            android:text="@string/date"
            android:textColor="@color/colorLightText"/>
        <TextView
            android:id="@+id/line2"
            android:layout_width="155dp"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@color/colorLightText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/time"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="17dp"
            app:layout_goneMarginTop="0dp"
            android:layout_marginBottom="29dp"/>
        <TextView
            android:id="@+id/num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/line"
            android:textColor="@color/colorLightText"
            android:text="@string/cvv"
            app:layout_constraintStart_toEndOf="@id/time"
            android:layout_marginLeft="51dp"
            android:layout_marginTop="31dp"/>
        <TextView
            android:id="@+id/line3"
            android:layout_width="155dp"
            android:layout_height="1dp"
            android:layout_marginTop="3dp"
            android:background="@color/colorLightText"
            app:layout_constraintStart_toEndOf="@id/line2"
            app:layout_constraintTop_toBottomOf="@id/num"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="20dp"
            app:layout_goneMarginTop="0dp"
            android:layout_marginBottom="29dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>